RESOLVED FIXED92600
Hit testing in the gap between pages returns incorrect results in flipped blocks writing modes
https://bugs.webkit.org/show_bug.cgi?id=92600
Summary Hit testing in the gap between pages returns incorrect results in flipped blo...
mitz
Reported 2012-07-29 17:21:02 PDT
Hit testing in the gap between pages returns incorrect results in flipped blocks writing modes
Attachments
Make RenderView::updateHitTestResult use offsetForContents() (7.08 KB, patch)
2012-07-29 17:36 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2012-07-29 17:36:01 PDT
Created attachment 155188 [details] Make RenderView::updateHitTestResult use offsetForContents()
mitz
Comment 2 2012-07-29 17:44:34 PDT
Note You need to log in before you can comment on or make changes to this bug.