Hit testing in the gap between pages returns incorrect results in flipped blocks writing modes https://bugs.webkit.org/show_bug.cgi?id=92600

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/multicol/hit-test-gap-between-pages-flipped.html

* rendering/RenderBlock.h:
(WebCore::RenderBlock): Promoted offsetForContents() from private to protected, and demoted
adjustPointToColumnContents() back to private.
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTest): Changed to flip the point passed to updateHitTestResults().
* rendering/RenderView.cpp:
(WebCore::RenderView::updateHitTestResult): Changed to call offsetForContents(), which, as
of r123977, correctly accounts for flippedness.

LayoutTests:

* fast/multicol/hit-test-gap-between-pages-flipped-expected.txt: Added.
* fast/multicol/hit-test-gap-between-pages-flipped.html: Added.



Canonical link: https://commits.webkit.org/110424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123990 268f45cc-cd09-0410-ab3c-d52691b4dbfc